--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "87c4f6bb",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
    "execution_count": 9,
    "id": "ff5f7e4c",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
